Include the type of balloon in the request
