# swagger.yaml
@@ -159,6 +159,8 @@ paths:
       tags: [User]
       security:
         - ApiKeyAuth: []
+      parameters:
+        - $ref: '#/components/parameters/balloonType'
       responses:
         200:
           description: The updated user
@@ -313,6 +315,16 @@ components:
       description: 'The id of the user'
       schema:
         type: string
+    balloonType:
+      name: type
+      in: query
+      required: true
+      description: 'The type of the balloon'
+      schema:
+        type: string
+        enum:
+          - 'default'
+          - 'confetti'
 
   responses:
     BadRequest: # 400
